--- a/Reeves_et_al_2021_Panda_ABM/Reeves_et_al_2021_Panda_ABM.tex
+++ b/Reeves_et_al_2021_Panda_ABM/Reeves_et_al_2021_Panda_ABM.tex
@@ -509,20 +509,20 @@ tool using behaviors as increasing the availability of tool-facilitated
 resources also increases number of times an individual encounters tool
 using opportunities.
 
-\hspace{0pt} In addition, the model demonstrates how these small scale
-tool using behaviors generate positive feedback with the changes in
-tool-use locations that further enhances the availability of resources
-and the number of tool using opportunities over the long term. Moreover,
-the fact that the model Though environmental dynamics are often argued
-to influence behavioral patterns across evolutionary time-scales but,
-such arguments lack mechanisms that causally link the two processes
-together (16, 39, 40). Our model contributes to this discussion by
-illustrating how processes that operate on different temporal scales
-produces feedback. While the model does not consider reproduction, these
-results may imply that new generations of a population where such
-feedback is in effect inherit a landscape in which resources associated
-with this type of tool using behavior are more accessible than they were
-in previous generations.
+In addition, the model demonstrates how these small scale tool using
+behaviors generate positive feedback with the changes in tool-use
+locations that further enhances the availability of resources and the
+number of tool using opportunities over the long term. Moreover, the
+fact that the model Though environmental dynamics are often argued to
+influence behavioral patterns across evolutionary time-scales but, such
+arguments lack mechanisms that causally link the two processes together
+(16, 39, 40). Our model contributes to this discussion by illustrating
+how processes that operate on different temporal scales produces
+feedback. While the model does not consider reproduction, these results
+may imply that new generations of a population where such feedback is in
+effect inherit a landscape in which resources associated with this type
+of tool using behavior are more accessible than they were in previous
+generations.
 
 \hypertarget{implications-for-chimpanzee-stone-tool-use}{%
 \subsubsection{Implications for Chimpanzee Stone Tool
@@ -569,19 +569,36 @@ landscape.
 \subsubsection{Implications for hominin
 evolution}\label{implications-for-hominin-evolution}}
 
-\hspace{0pt} One of the hallmarks of hominin and human niche is the
-capacity to enable to increase their access to resources through the
-transport and reuse of tool material (23, 43--45). The relocation of
-such materials into material poor areas, effectively makes a lasting
-change to the environment which, in turn conditions, the mobility,
-foraging, or even settlement strategies of future generations (6,
-46--48). Within this context, our model shows that even transport over
-short distances can modify landscapes in such a way that increases, both
-the opportunities for tool use and the accessibility of resources.
+One of the hallmarks of hominin and human niche is the capacity to
+enable to increase their access to resources through the transport and
+reuse of tool material (23, 43--45). The relocation of such materials
+into material poor areas, effectively makes a lasting change to the
+environment which, in turn conditions, the mobility, foraging, or even
+settlement strategies of future generations (6, 46--48). Within this
+context, our model shows that even transport over short distances can
+modify landscapes in such a way that increases, both the opportunities
+for tool use and the accessibility of resources.
 
-\begin{verbatim}
-It may be that such interactions between the distribution of resources and short term tool transport behavior had the capacity to generate feedback that may have influenced the role tool use in  hominin evolution. For example, percussive tools may facilitated access to animal protein through the breakage bones prior to the emergence core and flake technology [@thompsonOriginsHumanPredatory2019]. Within the context of the model it is plausible, that the interaction between short distance transport of percussive tools and the changing locations of animal carcasses as the result of the emergence of new kills and the decomposition of old kills, would have created a dynamic that would systematically seed a lake margin environment with percussive tools. This would increase both the number of opportunities and encounter rates with scavengable carcasses and in turn increase the contribution of animal protein to the hominin diet. Such encounter rates would have been critical to recognizing animal carcasses as a food resource and its increased consumption over time [@thompsonOriginsHumanPredatory2019]. In may that simple interactions between local environmental dynamics and tool transport may have contributed to the increased consumption of protein which is argued to have played an important role in hominin brain evolution and even the emergence of _H. erectus_ [@antonEvolutionEarlyHomo2014; @lalandNicheConstructionBiological2000; @pattersonComparativeIsotopicEvidence2019].
-\end{verbatim}
+It may be that such interactions between the distribution of resources
+and short term tool transport behavior had the capacity to generate
+feedback that may have influenced the role tool use in hominin
+evolution. For example, percussive tools may facilitated access to
+animal protein through the breakage bones prior to the emergence core
+and flake technology (49). Within the context of the model it is
+plausible, that the interaction between short distance transport of
+percussive tools and the changing locations of animal carcasses as the
+result of the emergence of new kills and the decomposition of old kills,
+would have created a dynamic that would systematically seed a lake
+margin environment with percussive tools. This would increase both the
+number of opportunities and encounter rates with scavengable carcasses
+and in turn increase the contribution of animal protein to the hominin
+diet. Such encounter rates would have been critical to recognizing
+animal carcasses as a food resource and its increased consumption over
+time (49). In may that simple interactions between local environmental
+dynamics and tool transport may have contributed to the increased
+consumption of protein which is argued to have played an important role
+in hominin brain evolution and even the emergence of \emph{H. erectus}
+(6, 50, 51).
 
 \hypertarget{implications-for-the-archaeological-record}{%
 \subsubsection{Implications for the archaeological
@@ -593,12 +610,12 @@ static material record. As such, the results of the model provides novel
 insights into the transformation of these processes into an
 archaeological record. Percussive tools are the most characteristic
 artefact of the primate stone tool record and are well described in both
-human and nonhuman primates (49, 50). The results of the model
+human and nonhuman primates (52, 53). The results of the model
 illustrate how the tangible traces on left on percussive tools in terms
 of their degree of utilization and their distance from their source
 location are result of this interaction between external and behavioral
 processes. Both of these attributes can be inferred from archaeological
-contexts (18, 51).
+contexts (18, 54).
 
 However, documenting this pattern in an archaeological context is far
 more complex. While the results of this study show that in some
@@ -616,15 +633,15 @@ archaeological record as fragments or as an exhausted tool, at which
 point, they become almost archaeologically invisible (32). This
 phenomenon is echoed in the Tai Forest, for example, stone tool use was
 continuously observed from 1979 to 1983 site of Panda 100, until the
-death of the tree in 1984 (52). Yet, archaeological investigation of the
+death of the tree in 1984 (55). Yet, archaeological investigation of the
 site yielded little to no evidence of complete hammerstones, suggesting
 that the discarded hammer stones at the once live tree become a
-secondary source of material for other nut bearing trees (34, 53).
+secondary source of material for other nut bearing trees (34, 56).
 
 Although there is currently no physical evidence, it has been postulated
 that a culture of percussive technology similar to that of modern-day
 chimpanzees may have existed prior to the earliest known archaeological
-evidence of early hominins (10, 13, 54). Few expectations have, however,
+evidence of early hominins (10, 13, 57). Few expectations have, however,
 been set forth regarding the composition of this archaeological record.
 Here we build upon the expectations of Panger et al. (15) by
 illustrating how the structure of the environment influences structure
@@ -966,40 +983,59 @@ doi:\href{https://doi.org/10.1002/evan.21886}{10.1002/evan.21886}.}
 construction theory with stone tools. \emph{Evolutionary
 Anthropology}:evan.21881.}
 
-\leavevmode\hypertarget{ref-arroyoPoundingToolsHWK2018}{}%
+\leavevmode\hypertarget{ref-thompsonOriginsHumanPredatory2019}{}%
 \CSLLeftMargin{49. }
+\CSLRightInline{Thompson JC, Carvalho S, Marean CW, Alemseged Z (2019)
+Origins of the {Human Predatory Pattern}: {The Transition} to
+{Large}-{Animal Exploitation} by {Early Hominins}. \emph{Current
+Anthropology} 60(1):1--23.}
+
+\leavevmode\hypertarget{ref-antonEvolutionEarlyHomo2014}{}%
+\CSLLeftMargin{50. }
+\CSLRightInline{AntÃÂn SC, Potts R, Aiello LC (2014) Evolution of early
+{Homo}: {An} integrated biological perspective. \emph{Science}
+345(6192):1236828.}
+
+\leavevmode\hypertarget{ref-pattersonComparativeIsotopicEvidence2019}{}%
+\CSLLeftMargin{51. }
+\CSLRightInline{Patterson DB, et al. (2019) Comparative isotopic
+evidence from {East Turkana} supports a dietary shift within the genus
+{Homo}. \emph{Nat Ecol Evol} 3(7):1048--1056.}
+
+\leavevmode\hypertarget{ref-arroyoPoundingToolsHWK2018}{}%
+\CSLLeftMargin{52. }
 \CSLRightInline{Arroyo A, de la Torre I (2018) Pounding tools in {HWK
 EE} and {EF}-{HR} ({Olduvai Gorge}, {Tanzania}): {Percussive} activities
 in the {Oldowan}-{Acheulean} transition. \emph{Journal of Human
 Evolution} 120:402--421.}
 
 \leavevmode\hypertarget{ref-benito-calvoFirstGISAnalysis2015}{}%
-\CSLLeftMargin{50. }
+\CSLLeftMargin{53. }
 \CSLRightInline{Benito-Calvo A, Carvalho S, Arroyo A, Matsuzawa T, de la
 Torre I (2015) First {GIS Analysis} of {Modern Stone Tools Used} by
 {Wild Chimpanzees} ({Pan} troglodytes verus) in {Bossou}, {Guinea},
 {West Africa}. \emph{PLoS ONE} 10(3):e0121613.}
 
 \leavevmode\hypertarget{ref-lathamNondestructiveXrfCharacterization1992}{}%
-\CSLLeftMargin{51. }
+\CSLLeftMargin{54. }
 \CSLRightInline{Latham TS, Sutton PA, Verosub KL (1992) Non-destructive
 xrf characterization of basaltic artifacts from {Truckee}, {California}.
 \emph{Geoarchaeology} 7(2):81--101.}
 
 \leavevmode\hypertarget{ref-boeschWildCulturesComparison2014}{}%
-\CSLLeftMargin{52. }
+\CSLLeftMargin{55. }
 \CSLRightInline{Boesch C (2014) \emph{Wild cultures a comparison between
 chimpanzee and human cultures.} ({Cambridge University Press},
 {Cambridge}).}
 
 \leavevmode\hypertarget{ref-mercaderExcavationChimpanzeeStone2002}{}%
-\CSLLeftMargin{53. }
+\CSLLeftMargin{56. }
 \CSLRightInline{Mercader J, Panger M, Boesch C (2002) Excavation of a
 {Chimpanzee Stone Tool Site} in the {African Rainforest}. \emph{Science}
 296(5572):1452--1455.}
 
 \leavevmode\hypertarget{ref-mcgrewSearchLastCommon2010}{}%
-\CSLLeftMargin{54. }
+\CSLLeftMargin{57. }
 \CSLRightInline{McGrew WC (2010) In search of the last common ancestor:
 New findings on wild chimpanzees. \emph{Philosophical Transactions of
 the Royal Society B: Biological Sciences} 365(1556):3267--3276.}
