LL_TT Comments update

--- a/Reeves_et_al_2021_Panda_ABM/pnas-sample.bib
+++ b/Reeves_et_al_2021_Panda_ABM/pnas-sample.bib
@@ -886,3 +886,58 @@
   abstract = {Although scientists are aware that humans share the same biological heritage as do all other organisms on the planet, the reliance of Homo sapiens on culture and cooperation has resulted in what can best be described as â€˜â€˜a spectacular evolutionary anomaly.â€ The extra-somatic adaptations, technological domi- nance, and success of our species in colonizing every terrestrial habitat have no parallel. Moreover, Homo sapiens accounts for about eight times as much biomass as do all other terrestrial wild vertebrates combined, an amount equivalent to the biomass of all 14,000+ species of ants, the most successful terrestrial invertebrates. Human societies are complex, with more specialized economic niches in the United States than the total number of mammalian species on the planet. While some might suggest that only post-industrial humans achieved stunning biological success, data suggest that humans living as hunter-gatherers would have attained a world population of more than 70 million individuals and a total biomass greater than that of any other large vertebrate on the planet if agriculture had not been repeatedly invented as they spread.},
   number = {5},
 }
+@Article{visalberghiDistributionPotentialSuitable2009,
+  title = {Distribution of Potential Suitable Hammers and Transport of Hammer Tools and Nuts by Wild Capuchin Monkeys},
+  author = {Elisabetta Visalberghi and Noemi Spagnoletti and Eduardo D. {Ramos da Silva} and Fabio R. D. Andrade and Eduardo Ottoni and Patricia Izar and Dorothy Fragaszy},
+  year = {2009},
+  month = {apr},
+  volume = {50},
+  pages = {95--104},
+  issn = {1610-7365},
+  doi = {10.1007/s10329-008-0127-9},
+  file = {/Users/jonathanreeves/Dropbox/Articles and Books/storage/3D7CAK9Z/Visalberghi et al. - 2009 - Distribution of potential suitable hammers and tra.pdf},
+  journal = {Primates},
+  language = {en},
+  number = {2},
+}
+@Article{whitenArchaeologyMeetsPrimate2013,
+  title = {Archaeology Meets Primate Technology},
+  author = {Andrew Whiten},
+  year = {2013},
+  month = {jun},
+  volume = {498},
+  pages = {303--305},
+  publisher = {{Nature Publishing Group}},
+  issn = {1476-4687},
+  doi = {10.1038/498303a},
+  copyright = {2013 Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
+  file = {/Users/jonathanreeves/Dropbox/Articles and Books/storage/UHUNJLP3/Whiten - 2013 - Archaeology meets primate technology.pdf;/Users/jonathanreeves/Dropbox/Articles and Books/storage/6GMMN5BI/498303a.html},
+  journal = {Nature},
+  language = {en},
+  number = {7454},
+}
+@Article{plummerFlakedStonesOld2004,
+  title = {Flaked Stones and Old Bones: {{Biological}} and Cultural Evolution at the Dawn of Technology},
+  author = {Thomas W. Plummer},
+  year = {2004},
+  volume = {47},
+  pages = {118--164},
+  issn = {0096848X},
+  doi = {10.1002/ajpa.20157},
+  file = {/Users/jonathanreeves/Dropbox/Articles and Books/storage/F2T9UZLG/Plummer - 2004 - Flaked stones and old bones Biological and cultur.pdf},
+  journal = {Yearbook of Physical Anthropology},
+  keywords = {Africa,Early Homo,Oldowan,Plio-Pleistocene},
+  pmid = {15605391},
+}
+@Article{blumenschineEffectsDistanceStone2008,
+  title = {Effects of Distance from Stone Source on Landscape-Scale Variation in {{Oldowan}} Artifact Assemblages in the {{Paleo}}-{{Olduvai Basin}}, {{Tanzania}}},
+  author = {Robert J. Blumenschine and Fidelis T. Masao and Joanne C. Tactikos and James I. Ebert},
+  year = {2008},
+  volume = {35},
+  pages = {76--86},
+  issn = {10959238},
+  doi = {10.1016/j.jas.2007.02.009},
+  journal = {Journal of Archaeological Science},
+  keywords = {Distance-decay,Hominin land use,Material transport,Oldowan,Olduvai Gorge,Stone artifacts},
+  number = {1},
+}
